// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBackendTable should create table filter meta and custom props based on filter meta list 1`] = `
{
  "extraTableFilterMeta": Map {
    "sql" => {
      "checked": false,
      "filterCustomType": "input",
      "filterKey": "sql",
      "filterLabel": "SQL",
    },
    "rule_name" => {
      "checked": false,
      "filterCustomType": "select",
      "filterKey": "rule_name",
      "filterLabel": "审核规则",
    },
    "db_user" => {
      "checked": false,
      "filterCustomType": "select",
      "filterKey": "db_user",
      "filterLabel": "用户",
    },
    "schema_name" => {
      "checked": false,
      "filterCustomType": "select",
      "filterKey": "schema_name",
      "filterLabel": "schema",
    },
    "counter" => {
      "checked": false,
      "filterCustomType": "input",
      "filterKey": "counter",
      "filterLabel": "出现次数 > ",
    },
    "query_time_avg" => {
      "checked": false,
      "filterCustomType": "input",
      "filterKey": "query_time_avg",
      "filterLabel": "平均执行时间 > ",
    },
    "row_examined_avg" => {
      "checked": false,
      "filterCustomType": "input",
      "filterKey": "row_examined_avg",
      "filterLabel": "平均扫描行数 > ",
    },
    "last_receive_timestamp" => {
      "checked": false,
      "filterCustomType": "date-range",
      "filterKey": "last_receive_timestamp",
      "filterLabel": "最后匹配时间",
    },
    "first_receive_day" => {
      "checked": false,
      "filterCustomType": "date-range",
      "filterKey": "first_receive_day",
      "filterLabel": "最初匹配日期",
    },
  },
  "tableFilterCustomProps": Map {
    "sql" => undefined,
    "rule_name" => {
      "options": [
        {
          "label": "MySQL",
          "options": [
            {
              "label": "禁止使用没有WHERE条件或者WHERE条件恒为TRUE的SQL",
              "value": "all_check_where_is_invalid",
            },
            {
              "label": "禁止char, varchar类型字段字符长度总和超过阈值",
              "value": "ddl_check_char_length",
            },
            {
              "label": "TIMESTAMP 类型的列必须添加默认值",
              "value": "ddl_check_column_timestamp_without_default",
            },
            {
              "label": "除了自增列及大字段列之外，每个列都必须添加默认值",
              "value": "ddl_check_column_without_default",
            },
            {
              "label": "新建表建议加入 IF NOT EXISTS，保证重复执行不报错",
              "value": "ddl_check_table_without_if_not_exists",
            },
            {
              "label": "禁止使用全模糊搜索或左模糊搜索",
              "value": "dml_check_fuzzy_search",
            },
            {
              "label": "JOIN字段必须包含索引",
              "value": "dml_check_join_field_use_index",
            },
            {
              "label": "禁止对索引列进行数学运算和使用函数",
              "value": "dml_check_math_computation_or_func_on_index",
            },
          ],
        },
      ],
    },
    "db_user" => {
      "options": [
        {
          "label": "",
          "value": "",
        },
      ],
    },
    "schema_name" => {
      "options": [
        {
          "label": "test123",
          "value": "test123",
        },
        {
          "label": "",
          "value": "",
        },
        {
          "label": "sqle",
          "value": "sqle",
        },
        {
          "label": "test",
          "value": "test",
        },
      ],
    },
    "counter" => undefined,
    "query_time_avg" => undefined,
    "row_examined_avg" => undefined,
    "last_receive_timestamp" => {
      "showTime": true,
    },
    "first_receive_day" => {
      "showTime": false,
    },
  },
}
`;

exports[`useBackendTable should create table filter meta and custom props based on filter meta list 2`] = `
{
  "extraTableFilterMeta": Map {
    "sql" => {
      "checked": true,
      "filterCustomType": "input",
      "filterKey": "sql",
      "filterLabel": "SQL",
    },
    "rule_name" => {
      "checked": true,
      "filterCustomType": "select",
      "filterKey": "rule_name",
      "filterLabel": "审核规则",
    },
    "db_user" => {
      "checked": true,
      "filterCustomType": "select",
      "filterKey": "db_user",
      "filterLabel": "用户",
    },
    "schema_name" => {
      "checked": true,
      "filterCustomType": "select",
      "filterKey": "schema_name",
      "filterLabel": "schema",
    },
    "counter" => {
      "checked": true,
      "filterCustomType": "input",
      "filterKey": "counter",
      "filterLabel": "出现次数 > ",
    },
    "query_time_avg" => {
      "checked": true,
      "filterCustomType": "input",
      "filterKey": "query_time_avg",
      "filterLabel": "平均执行时间 > ",
    },
    "row_examined_avg" => {
      "checked": true,
      "filterCustomType": "input",
      "filterKey": "row_examined_avg",
      "filterLabel": "平均扫描行数 > ",
    },
    "last_receive_timestamp" => {
      "checked": true,
      "filterCustomType": "date-range",
      "filterKey": "last_receive_timestamp",
      "filterLabel": "最后匹配时间",
    },
    "first_receive_day" => {
      "checked": true,
      "filterCustomType": "date-range",
      "filterKey": "first_receive_day",
      "filterLabel": "最初匹配日期",
    },
  },
  "tableFilterCustomProps": Map {
    "sql" => undefined,
    "rule_name" => {
      "options": [
        {
          "label": "MySQL",
          "options": [
            {
              "label": "禁止使用没有WHERE条件或者WHERE条件恒为TRUE的SQL",
              "value": "all_check_where_is_invalid",
            },
            {
              "label": "禁止char, varchar类型字段字符长度总和超过阈值",
              "value": "ddl_check_char_length",
            },
            {
              "label": "TIMESTAMP 类型的列必须添加默认值",
              "value": "ddl_check_column_timestamp_without_default",
            },
            {
              "label": "除了自增列及大字段列之外，每个列都必须添加默认值",
              "value": "ddl_check_column_without_default",
            },
            {
              "label": "新建表建议加入 IF NOT EXISTS，保证重复执行不报错",
              "value": "ddl_check_table_without_if_not_exists",
            },
            {
              "label": "禁止使用全模糊搜索或左模糊搜索",
              "value": "dml_check_fuzzy_search",
            },
            {
              "label": "JOIN字段必须包含索引",
              "value": "dml_check_join_field_use_index",
            },
            {
              "label": "禁止对索引列进行数学运算和使用函数",
              "value": "dml_check_math_computation_or_func_on_index",
            },
          ],
        },
      ],
    },
    "db_user" => {
      "options": [
        {
          "label": "",
          "value": "",
        },
      ],
    },
    "schema_name" => {
      "options": [
        {
          "label": "test123",
          "value": "test123",
        },
        {
          "label": "",
          "value": "",
        },
        {
          "label": "sqle",
          "value": "sqle",
        },
        {
          "label": "test",
          "value": "test",
        },
      ],
    },
    "counter" => undefined,
    "query_time_avg" => undefined,
    "row_examined_avg" => undefined,
    "last_receive_timestamp" => {
      "showTime": true,
    },
    "first_receive_day" => {
      "showTime": false,
    },
  },
}
`;

exports[`useBackendTable should generate sortable table columns with custom class names and render options 1`] = `
[
  {
    "className": "test-cls",
    "dataIndex": "fingerprint",
    "render": [Function],
    "sorter": false,
    "title": "SQL指纹",
  },
  {
    "className": "test-cls",
    "dataIndex": "sql",
    "render": [Function],
    "sorter": false,
    "title": "SQL",
  },
  {
    "className": undefined,
    "dataIndex": "audit_results",
    "render": [Function],
    "sorter": false,
    "title": "审核结果",
  },
  {
    "className": undefined,
    "dataIndex": "counter",
    "render": [Function],
    "sorter": true,
    "title": "出现次数",
  },
  {
    "className": undefined,
    "dataIndex": "last_receive_timestamp",
    "render": [Function],
    "sorter": true,
    "title": "最后匹配时间",
  },
  {
    "className": undefined,
    "dataIndex": "query_time_avg",
    "render": [Function],
    "sorter": true,
    "title": "平均执行时间",
  },
  {
    "className": undefined,
    "dataIndex": "query_time_max",
    "render": [Function],
    "sorter": true,
    "title": "最长执行时间",
  },
  {
    "className": undefined,
    "dataIndex": "row_examined_avg",
    "render": [Function],
    "sorter": true,
    "title": "平均扫描行数",
  },
  {
    "className": undefined,
    "dataIndex": "db_user",
    "render": [Function],
    "sorter": false,
    "title": "用户",
  },
  {
    "className": undefined,
    "dataIndex": "schema_name",
    "render": [Function],
    "sorter": false,
    "title": "Schema",
  },
]
`;

exports[`useBackendTable should generate sortable table columns with custom class names and render options 2`] = `
[
  {
    "className": undefined,
    "dataIndex": "fingerprint",
    "render": [Function],
    "sorter": false,
    "title": "SQL指纹",
  },
  {
    "className": undefined,
    "dataIndex": "sql",
    "render": [Function],
    "sorter": false,
    "title": "SQL",
  },
  {
    "className": undefined,
    "dataIndex": "audit_results",
    "render": [Function],
    "sorter": false,
    "title": "审核结果",
  },
  {
    "className": undefined,
    "dataIndex": "counter",
    "render": [Function],
    "sorter": true,
    "title": "出现次数",
  },
  {
    "className": undefined,
    "dataIndex": "last_receive_timestamp",
    "render": [Function],
    "sorter": true,
    "title": "最后匹配时间",
  },
  {
    "className": undefined,
    "dataIndex": "query_time_avg",
    "render": [Function],
    "sorter": true,
    "title": "平均执行时间",
  },
  {
    "className": undefined,
    "dataIndex": "query_time_max",
    "render": [Function],
    "sorter": true,
    "title": "最长执行时间",
  },
  {
    "className": undefined,
    "dataIndex": "row_examined_avg",
    "render": [Function],
    "sorter": true,
    "title": "平均扫描行数",
  },
  {
    "className": undefined,
    "dataIndex": "db_user",
    "render": [Function],
    "sorter": false,
    "title": "用户",
  },
  {
    "className": undefined,
    "dataIndex": "schema_name",
    "render": [Function],
    "sorter": false,
    "title": "Schema",
  },
]
`;

exports[`useBackendTable should render table by "head" fields 1`] = `
<div>
  <div
    class="ant-table-wrapper css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      a1
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      b1
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="test-a-1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-a-1
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-b-1
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="test-a-2"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-a-2
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-b-2
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="ant-pagination ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-txh9fw"
        >
          <li
            aria-disabled="true"
            class="ant-pagination-prev ant-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="ant-pagination-next ant-pagination-disabled"
            title="Next Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`useBackendTable should render table by "head" fields 2`] = `
<div>
  <div
    class="ant-table-wrapper css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      a
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      b
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="test-a-1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-a-1
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-b-1
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="test-a-2"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-a-2
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-b-2
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="ant-pagination ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-txh9fw"
        >
          <li
            aria-disabled="true"
            class="ant-pagination-prev ant-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="ant-pagination-next ant-pagination-disabled"
            title="Next Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`useBackendTable should render table by "head" fields 3`] = `
<div>
  <div
    class="ant-table-wrapper css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      a
                    </th>
                    <th
                      class="ant-table-cell"
                      scope="col"
                    >
                      b
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="test-a-1"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-a-1
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-b-1
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="test-a-2"
                  >
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-a-2
                          </span>
                        </div>
                      </div>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div
                        style="min-width: 40px;"
                      >
                        <div
                          class="ant-typography css-dev-only-do-not-override-txh9fw"
                        >
                          <span
                            class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line css-dev-only-do-not-override-txh9fw"
                            style="max-width: 300px;"
                          >
                            test-b-2
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="ant-pagination ant-table-pagination ant-table-pagination-right css-dev-only-do-not-override-txh9fw"
        >
          <li
            aria-disabled="true"
            class="ant-pagination-prev ant-pagination-disabled"
            title="Previous Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </button>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a
              rel="nofollow"
            >
              1
            </a>
          </li>
          <li
            aria-disabled="true"
            class="ant-pagination-next ant-pagination-disabled"
            title="Next Page"
          >
            <button
              class="ant-pagination-item-link"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
